@@ -1,1 +1,1 @@
-DIST v2.0.5_05.tar.gz 5420665 SHA256 077fdee93f70d3d7cec05ddac22f07b22759f22c1fb63f927769beed2cd0670c SHA512 7a6600e7d98fa4649a281b161eaaaa2fbfd337b7b26b0d054e23974aa555a383d476b5464183b259812330c4e00a36be44a5efe210950e2ad24ab867375cb9be WHIRLPOOL ebcd634341016a46c098bc4708f93b51fa46f79dd367162711a965d3167f734f640d55f8415062e513f776149f645de7933b7f681614f3b38c1a3ec1a35d2585
+DIST rum-2.0.5.5.tar.gz 5420665 SHA256 077fdee93f70d3d7cec05ddac22f07b22759f22c1fb63f927769beed2cd0670c SHA512 7a6600e7d98fa4649a281b161eaaaa2fbfd337b7b26b0d054e23974aa555a383d476b5464183b259812330c4e00a36be44a5efe210950e2ad24ab867375cb9be WHIRLPOOL ebcd634341016a46c098bc4708f93b51fa46f79dd367162711a965d3167f734f640d55f8415062e513f776149f645de7933b7f681614f3b38c1a3ec1a35d2585
